springboot-docker/src/k8s/ingress/tomcat-ingress-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-tls
  namespace: default
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
spec:
  tls:
  - hosts:
    - tomcat.mtz.com
    secretName: tomcat-ingress-secret
  rules:
  - host: tomcat.mtz.com
    http:
      paths:
      - path:
        backend:
          serviceName: tomcat
          servicePort: 8080
